# CForge

./: .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  GenerateCoverageReport.cmake  README.md
.github/workflows/: build.yml  documentation.yml
cmake/Config/: CForgeConfig.cmake.in
cmake/Modules/: CForgeAssert.cmake  CForgeDoc.cmake  CForgeForceColoredOutput.cmake  CForgeJSON.cmake  CForgeOption.cmake  CForgeProjectInfo.cmake  CForgeTargetAddWarnings.cmake  CForgeTargetEnableSanitizers.cmake  CForgeUnit.cmake  CForgeUnitTestRunner.CMakeLists.txt.in  CForgeUnitTestRunner.cmake.in  FindGDB.cmake  FindLCOV.cmake  FindOpenOCD.cmake  FindSphinx.cmake  default-warnings.json
cmake/Modules/CForgeTargetAddWarnings/: CForgeDefineWarningProfile.cmake  default-warnings.cmake
cmake/Modules/CForgeUnit/: CForgeUnitDetails.cmake  CTestRunner.CMakeLists.txt.in  ContextCache.cmake.in  RunTest.CMakeLists.txt.in  RunTest.cmake.in
cmake/Modules/CForgeUnit/CTestRunner/: CMakeLists.txt
cmake/Modules/CForgeUnit/Coverage/: GenerateCoverageReport.cmake  RunCoverage.cmake
cmake/Modules/CForgeUnit/Coverage/TestProject/: CMakeLists.txt
cmake/Modules/CForgeUnit/Registrar/: CForgeUnitRegisterTest.cmake.in  CMakeLists.txt  ContextCache.cmake.in
cmake/Modules/CForgeUnit/Runner/: CMakeLists.txt.in  ContextCache.cmake.in
doc/: CMakeLists.txt  conf.py  index.rst  patch-cmake-objects-inv.py  requirements.in  requirements.txt
doc/cmake/Modules/: CForgeAssert.rst  CForgeForceColoredOutput.rst  CForgeJSON.rst  CForgeTargetAddWarnings.rst  CForgeTargetEnableSanitizers.rst  FindGDB.rst  FindLCOV.rst  FindOpenOCD.rst  FindSphinx.rst  index.rst
doc/manual/: cforge-modules.7.rst  cforge-variables.7.rst
doc/readthedocs/: CopySource.cmake
doc/release/: 1.0.rst  index.rst  template.rst
test/: CMakeLists.txt  my-warnings-common.json  my-warnings.json
test/CForgeAssert/: CMakeLists.txt  Failure.test.cmake  FailureWithMessage.test.cmake  MissingArguments.test.cmake  MissingArguments.verify.cmake  Success.test.cmake  TestCaseFailure.cmake  TestCaseFailureWithMessage.cmake  TestCaseFailureWithMessage.verify.cmake  TestCaseSuccess.cmake  TestCaseSuccessWithMessage.cmake  TestSetup.cmake  assertion_fail.verify.cmake  assertion_pass_with_message.test.cmake  assertion_pass_with_message.verify.cmake  missing_argument.test.cmake
test/CForgeJSON/: CMakeLists.txt  TestSetup.cmake  get_array_as_list_pass.test.cmake  member_as_string_pass.test.cmake
test/CForgeTargetAddWarnings/: CMakeLists.txt  TestSetup.cmake  default_profiles.test.cmake  valid-profiles-common.cmake  valid-profiles-common.json  valid-profiles.cmake  valid-profiles.json  valid_profiles.test.cmake  warning_as_error.test.cmake
test/CForgeTargetEnableSanitizers/: CMakeLists.txt  not_a_target.test.cmake  not_supported_compiler.test.cmake  sanitizer_options_defined.test.cmake  sanitizers_enabled.test.cmake
test/CForgeUnit/: CMakeLists.txt  TestSetup.cmake  coverage_no_regression.test.cmake
test/CForgeUnit/TestProject/: CMakeLists.txt
test/Packaging/: CMakeLists.txt  add_subdirectory.test.cmake  cforgeconfig.test.cmake  fetchcontent.test.cmake
test/Packaging/add_subdirectory/: CMakeLists.txt
test/Packaging/cforgeconfig/: CMakeLists.txt
test/Packaging/fetchcontent/: CMakeLists.txt
