include(CForgeUnit)

add_subdirectory(CForgeAssert)
add_subdirectory(CForgeJSON)
add_subdirectory(CForgeTargetAddWarnings)
add_subdirectory(CForgeUnit)

if(CFORGE_ENABLE_COVERAGE)
    if(NOT WIN32)
        find_package(LCOV REQUIRED)
        cforge_unit_add_coverage()
    else()
        message(WARNING "Coverage analysis on Windows is not yet fully supported and may not work")
    endif()
endif()

if(CFORGE_UNIT_REGISTERED_TESTS)
    message(STATUS "Running CForge test suite using CTest...")
    cforge_unit_run_tests()
endif()
